31.12.2022 0.6.23b
--------------------------------------------------------------------------------
* -e option forces empty to keep output fifo-alive alive if some data left in it
* Minor fixes
* Documentation update

10.08.2022 0.6.22b
--------------------------------------------------------------------------------
* Man pages directory parameterization
* Tarball clenup, repacking

19.03.2020 0.6.21b
--------------------------------------------------------------------------------
* macOS port
* Decoration and syntax fixes

10.08.2015 0.6.20b
--------------------------------------------------------------------------------
* Thanks to Waldemar Brodkorb <wbx@openadk.org> for the fix of semaphores nature
* Fix the shameful strncat usage

19.08.2012 0.6.19b
--------------------------------------------------------------------------------
* Fix for non terminal execution on IBM AIX 5.3.
	Thanks to Ralf Winkel

27.07.2009 0.6.18b
--------------------------------------------------------------------------------
* "Fatal select(): Success" Artifact under Linux fixed.
	 Thanks Bernd Schuller and Dennis Schridde for discovering the bug

23.04.2009 0.6.17b
--------------------------------------------------------------------------------
* Empty -w gets 100% cpu usage under Linux. Fixed.
	 Thanks "David Hofstee" <davidh@blinker.nl> for the bugfix
* Man-page -r section fixed

21.11.2008 0.6.16b
--------------------------------------------------------------------------------
* Terminal emulation is more complex now. Great thanks:
	"lang qiu" <qiulang@gmail.com> who found the problem and the way to
		fix it under Solaris OS.
	"Alexey Rudometov" <rudometov@u-systems.ru>
		for reproduction of the bug and testing under Solaris
* Wrong ${PREFIX} in Makefile from previous release fixed
* Marks >>> and <<< added to logfile to indicate direction of stream
* Man page updated

27.01.2008 0.6.15b
--------------------------------------------------------------------------------